optimizing UserService